# ragsta

./: .gitignore  doc_ingestion.py  main.py  pyproject.toml
config/: demo.yaml
db/: models.py
postgres/: docker-compose.yml
ragsta/: doc_ingestion.py  embedding.py  main.py  pyproject.toml  rag.py
ragsta/db/: constants.py  initialization.py  models.py  vectorstore.py
