[project]
name = "ragsta"
version = "0.1.0"
description = "all other RAG solutions sucks"
authors = [
    {name = "Daniele Tarek Iaisy",email = "iaisy.danieletarek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

